--- a/jobportal-application/templates/jobs/jobs.html
+++ b/jobportal-application/templates/jobs/jobs.html
@@ -8,7 +8,7 @@
 
     <section class="job-form-section job-form-section--compressed">
         <div class="container">
-            <h2 class="heading">Search <span class="accent">for</span> job</h2>
+            <h2 class="heading">Search <span class="accent">for dream</span> job</h2>
             <form id="job-main-form" method="get" action="#" class="job-main-form">
                 <div class="controls">
                     <div class="row align-items-end">
