--- a/jobportal-application/templates/home.html
+++ b/jobportal-application/templates/home.html
@@ -28,7 +28,7 @@
                             <button type="button" class="btn btn-outline-primary"><i class="fa fa-sign-in"></i> Log in</button>
                         </p>
                     </form>
-                    <p class="text-center text-muted">Not registered yet?</p>
+                    <p class="text-center text-muted">No registered yet?</p>
                     <p class="text-center text-muted"><a href="client-register.html"><strong>Register now</strong></a>! It is easy and done in 1 minute and gives you access to special discounts and much more!</p>
                 </div>
             </div>
