--- a/jobportal-application/templates/home.html
+++ b/jobportal-application/templates/home.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <div class="custom-job-form-box">
-                        <h2 class="heading"><i class="fa fa-search" style="color: #82CFFD;"></i> Search<span class="accent">Your dream</span> job 12/02/2024</h2>
+                        <h2 class="heading"><i class="fa fa-search" style="color: #82CFFD;"></i> Search<span class="accent">Your dream</span> job</h2>
 
                         <form id="job-main-form" method="get" action="{% url 'jobs:searh' %}" class="job-main-form">
                             <div class="row align-items-center">
